<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Spectra</string>
    <string name="takePhoto" tools:ignore="MissingTranslation">Take an image</string>
    <string name="preview_photo" tools:ignore="MissingTranslation">Preview photo</string>
    <string name="imageAnalysis" tools:ignore="MissingTranslation">Analyze an image</string>
    <string name="calibrate" tools:ignore="MissingTranslation">Calibrate program</string>
    <string name="capture_spectrum" tools:ignore="MissingTranslation">Capture spectrum</string>
    <string name="previous_results" tools:ignore="MissingTranslation">Previous results</string>
    <string name="app_configuration" tools:ignore="MissingTranslation">App configuration</string>
    <string name="togglebutton" tools:ignore="MissingTranslation">ToggleButton</string>
    <string name="xd" tools:ignore="MissingTranslation">xd</string>
    <string name="plot_animate">Plot animate</string>
    <string name="x_2">x (2)</string>
    <string name="x_1">x (1)</string>
    <string name="_1">λ (1)</string>
    <string name="usb_camera">USB Camera</string>
    <string name="recalculate">Recalculate</string>
    <string name="plot_export">Plot export</string>
    <string name="_2">λ (2)</string>
</resources>
