<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jankos.spectra.obsoleteTakePhotoActivity">

    <ImageView
        android:id="@+id/capturedPhotoImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/preview_photo" />

    <Button
        android:text="@string/imageAnalysis"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/btnTakeAnalyzeImage"
        android:onClick="imageAnalysis"
        android:layout_marginBottom="19dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/capturedPhotoImageView" />

    <Button
        android:text="@string/takePhoto"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:onClick="takePhoto"
        android:layout_alignBaseline="@+id/btnTakeAnalyzeImage"
        android:layout_alignBottom="@+id/btnTakeAnalyzeImage"
        android:layout_alignStart="@+id/capturedPhotoImageView" />

</RelativeLayout>
