<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SLATEGRAY"
    android:fitsSystemWindows="true"
    tools:context="jankos.spectra.MainActivity">


    <Button
        android:id="@+id/btnCaptureSpectrum"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_above="@+id/btnConfig"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="38dp"
        android:layout_marginStart="16dp"
        android:onClick="captureUsbActivity"
        android:text="@string/capture_spectrum" />

    <Button
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnCaptureSpectrum"
        android:layout_marginTop="0dp"
        android:onClick="previousResultsActivity"
        android:text="@string/previous_results" />

    <Button
        android:id="@+id/btnConfig"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:width="300dp"
        android:height="100dp"
        android:background="@android:color/holo_blue_light"
        android:elevation="0dp"
        android:onClick="appConfigActivity"
        android:text="@string/app_configuration"
        android:visibility="visible"
        android:layout_alignBottom="@+id/btnCalibrate"
        android:layout_alignStart="@+id/btnCaptureSpectrum"
        android:layout_marginBottom="17dp" />

    <Button
        android:id="@+id/btnCalibrate"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginBottom="89dp"
        android:width="300dp"
        android:height="100dp"
        android:background="@android:color/holo_blue_light"
        android:elevation="0dp"
        android:onClick="calibrationActivity"
        android:text="@string/calibrate"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
