<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  UVCCamera
  ~  library and sample to access to UVC web camera on non-rooted Android device
  ~
  ~ Copyright (c) 2014-2017 saki t_saki@serenegiant.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~  All files in the folder are under this Apache License, Version 2.0.
  ~  Files in the libjpeg-turbo, libusb, libuvc, rapidjson folder
  ~  may have a different license, see the respective files.
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jankos.spectra.CaptureUsbActivity"
    tools:ignore="MergeRootFrame">

    <TextView
        android:id="@+id/textViewAnimatePlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="166dp"
        android:text="@string/plot_animate"
        ap:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="0dp"
        ap:layout_constraintBottom_toTopOf="@+id/btnAnimatePlot" />

    <com.serenegiant.widget.SimpleUVCCameraTextureView
        android:id="@+id/UVCCameraTextureView1"
        android:layout_width="410dp"
        android:layout_height="230dp"
        android:background="#ff000000"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="0dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_conversion_absoluteHeight="354dp"
        android:layout_marginTop="-10dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        ap:layout_constraintTop_toTopOf="parent"
        ap:layout_constraintRight_toRightOf="parent"
        ap:layout_constraintLeft_toLeftOf="parent"
        ap:layout_constraintHorizontal_bias="0.533" />

    <com.androidplot.xy.XYPlot
        android:id="@+id/plot"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        ap:domainTitle="Wavelength"
        ap:drawGridOnTop="false"
        ap:graphBackgroundColor="@color/ap_black"
        ap:gridBackgroundColor="@color/ap_black"
        ap:layout_constraintLeft_toLeftOf="parent"
        ap:layout_constraintRight_toRightOf="parent"
        ap:layout_constraintTop_toBottomOf="@+id/UVCCameraTextureView1"
        ap:rangeTitle="Intensity(%)"
        ap:domainTitleTextSize="10dp"
        ap:rangeTitleTextSize="10dp"
        ap:paddingTop="10dp"
        ap:paddingBottom="10dp"
        ap:paddingLeft="10dp"
        ap:paddingRight="10dp"
        ap:renderMode="use_background_thread"
        tools:layout_conversion_absoluteHeight="200dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="354dp" />

    <ToggleButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/togglebutton"
        tools:layout_conversion_absoluteX="161dp"
        tools:layout_conversion_absoluteY="554dp"
        tools:layout_conversion_absoluteWidth="88dp"
        tools:layout_conversion_absoluteHeight="48dp"
        ap:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="-3dp"
        ap:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        ap:layout_constraintRight_toRightOf="parent"
        ap:layout_constraintHorizontal_bias="0.05" />

    <ToggleButton
        android:id="@+id/btnAnimatePlot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:checked="true"
        ap:layout_constraintBottom_toBottomOf="parent"
        ap:layout_constraintHorizontal_bias="0.498"
        ap:layout_constraintLeft_toLeftOf="parent"
        ap:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/usb_camera"
        ap:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="0dp"
        ap:layout_constraintBottom_toTopOf="@+id/camera_button" />

    <Button
        android:id="@+id/btnPlotExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="exportPlot"
        android:text="@string/plot_export"
        ap:layout_constraintRight_toRightOf="parent"
        ap:layout_constraintTop_toBottomOf="@+id/plot" />

</android.support.constraint.ConstraintLayout>
